# dark-star

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml  test_ast.py
cli/: index.html
docs/: cli.md  htmx.md  index.md  routes.md
htmx/: index.html
routes/: index.html
search/: search_index.json
src/dark_star/: __init__.py  __main__.py  applications.py  templating.py
src/darkstar/: __init__.py  __main__.py  applications.py  templating.py
