[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "darkstar"
authors = [{name = "Felix Ingram", email = "f.ingram@gmail.com"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: Apache Software License"]
dynamic = ["version", "description"]
readme = "README.md"
requires-python = ">=3.6"
dependencies = [
"starlette",
"starlette-htmx",
"jinja2",
"click"
]

[project.urls]
Home = "https://github.com/lllama/dark-star"

[project.scripts]
darkstar = "darkstar.__main__:main"
